--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,11 @@
   "manifest_version": 3,
   "name": "Amazon Sakura Checker Viewer",
   "version": "0.1.0",
+  "icons": {
+    "16": "icon.png",
+    "48": "icon.png",
+    "128": "icon.png"
+  },
   "description": "Amazonの画面にサクラチェッカーの結果を直接表示します。",
   "background": {
     "service_worker": "background.js"
